# cadastro-api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
app/: auth.py  config.py  database.py  main.py  models.py  redis_client.py  schemas.py
app/routes/: auth.py  cep.py  clientes.py  cnpj.py
app/services/: brasil_api.py  cache.py
tests/: conftest.py  test_api.py
