[project]
name = "cadastro-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic[email]>=2",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis[hiredis]",
    "httpx",
    "python-jose[cryptography]>=3.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
